tests/compile_fail/effectful_stateful_manifest_undeclared_effect.stderr
error[E0277]: the stage `effects:` clause declares an effect missing from the handler's `AllowedEffects`
  --> tests/compile_fail/effectful_stateful_manifest_undeclared_effect.rs:10:13
   |
10 |       let _ = obzenflow_dsl::effectful_stateful!(
   |  _____________^
11 | |         Input -> { First } => StatefulFirstOnly,
12 | |         effects: [FirstEffect],
13 | |         middleware: []
14 | |     );
   | |_____^ this effect manifest is not contained in the handler's `AllowedEffects` set
   |
   = help: the trait `ManifestEffectsAreAllowedByHandler<EmptySet, SubsetProofStep<_, SubsetProofEnd>>` is not implemented for `WithMember<FirstEffect, EmptySet>`
   = note: the stage `effects:` clause is canonical: mirror its effects in `type AllowedEffects = obzenflow_runtime::effect_set![...]`, or change `effects:` first if the stage capability contract is wrong (FLOWIP-120z B9)
note: required by a bound in `__obzenflow_assert_effectful_stateful_contract`
  --> tests/compile_fail/effectful_stateful_manifest_undeclared_effect.rs:10:13
   |
10 |       let _ = obzenflow_dsl::effectful_stateful!(
   |  _____________^
11 | |         Input -> { First } => StatefulFirstOnly,
12 | |         effects: [FirstEffect],
13 | |         middleware: []
14 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_effectful_stateful_contract`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_stateful_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_stateful` (in Nightly builds, run with -Z macro-backtrace for more info)
